--- a/public/styles.css
+++ b/public/styles.css
@@ -982,6 +982,10 @@ input[type="range"]::-ms-fill-lower{
   margin-top: 0.5rem;
 }
 
+.mt-24{
+  margin-top: 6rem;
+}
+
 .block{
   display: block;
 }
@@ -1036,6 +1040,14 @@ input[type="range"]::-ms-fill-lower{
 
 .h-36{
   height: 9rem;
+}
+
+.h-\[900px\]{
+  height: 900px;
+}
+
+.h-\[100vh\]{
+  height: 100vh;
 }
 
 .w-full{
@@ -1431,6 +1443,10 @@ input[type="range"]::-ms-fill-lower{
   font-family: Inter, sans-serif;
 }
 
+.font-montserrat{
+  font-family: Montserrat, sans-serif;
+}
+
 .text-5xl{
   font-size: 3rem;
   line-height: 1;
@@ -1485,6 +1501,10 @@ input[type="range"]::-ms-fill-lower{
 
 .font-semibold{
   font-weight: 600;
+}
+
+.font-normal{
+  font-weight: 400;
 }
 
 .uppercase{
@@ -1547,6 +1567,11 @@ input[type="range"]::-ms-fill-lower{
 .text-gray-200{
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
+.text-\[\#00CCBB\]{
+  --tw-text-opacity: 1;
+  color: rgb(0 204 187 / var(--tw-text-opacity));
 }
 
 .shadow-xl{
