--- a/public/styles.css
+++ b/public/styles.css
@@ -1118,7 +1118,9 @@ input[type="range"]::-ms-fill-lower{
   width: 2000px;
 }
 
-
+.w-\[\]{
+  width: ;
+}
 
 .w-\[30\%\]{
   width: 30%;
@@ -1126,6 +1128,30 @@ input[type="range"]::-ms-fill-lower{
 
 .w-\[40\%\]{
   width: 40%;
+}
+
+.w-\[60\%\]{
+  width: 60%;
+}
+
+.w-\[400px\]{
+  width: 400px;
+}
+
+.w-\[300px\]{
+  width: 300px;
+}
+
+.w-\[100\%\]{
+  width: 100%;
+}
+
+.w-\[80\%\]{
+  width: 80%;
+}
+
+.w-\[90\%\]{
+  width: 90%;
 }
 
 .grow{
@@ -1147,6 +1173,10 @@ input[type="range"]::-ms-fill-lower{
 
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col{
