--- a/public/styles.css
+++ b/public/styles.css
@@ -859,10 +859,6 @@ input[type="range"]::-ms-fill-lower{
   z-index: 40;
 }
 
-.m-6{
-  margin: 1.5rem;
-}
-
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -871,6 +867,11 @@ input[type="range"]::-ms-fill-lower{
 .my-4{
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.my-7{
+  margin-top: 1.75rem;
+  margin-bottom: 1.75rem;
 }
 
 .my-5{
@@ -893,11 +894,6 @@ input[type="range"]::-ms-fill-lower{
   margin-bottom: 5rem;
 }
 
-.my-7{
-  margin-top: 1.75rem;
-  margin-bottom: 1.75rem;
-}
-
 .mt-\[15\%\]{
   margin-top: 15%;
 }
@@ -906,8 +902,36 @@ input[type="range"]::-ms-fill-lower{
   margin-bottom: 1.5rem;
 }
 
+.mt-10{
+  margin-top: 2.5rem;
+}
+
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+
 .mt-8{
   margin-top: 2rem;
+}
+
+.mb-32{
+  margin-bottom: 8rem;
+}
+
+.mb-20{
+  margin-bottom: 5rem;
+}
+
+.mb-3{
+  margin-bottom: 0.75rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
+}
+
+.mb-4{
+  margin-bottom: 1rem;
 }
 
 .ml-3{
@@ -918,16 +942,8 @@ input[type="range"]::-ms-fill-lower{
   margin-top: 1rem;
 }
 
-.mt-2{
-  margin-top: 0.5rem;
-}
-
 .mb-5{
   margin-bottom: 1.25rem;
-}
-
-.mb-4{
-  margin-bottom: 1rem;
 }
 
 .mt-6{
@@ -936,22 +952,6 @@ input[type="range"]::-ms-fill-lower{
 
 .mb-48{
   margin-bottom: 12rem;
-}
-
-.mb-3{
-  margin-bottom: 0.75rem;
-}
-
-.mt-10{
-  margin-top: 2.5rem;
-}
-
-.mb-20{
-  margin-bottom: 5rem;
-}
-
-.mb-32{
-  margin-bottom: 8rem;
 }
 
 .block{
@@ -1010,16 +1010,16 @@ input[type="range"]::-ms-fill-lower{
   width: 50%;
 }
 
-.w-\[90\%\]{
-  width: 90%;
-}
-
-.w-\[40\%\]{
-  width: 40%;
+.w-\[80\%\]{
+  width: 80%;
 }
 
 .w-\[100\%\]{
   width: 100%;
+}
+
+.w-\[90\%\]{
+  width: 90%;
 }
 
 .w-6{
@@ -1055,10 +1055,6 @@ input[type="range"]::-ms-fill-lower{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .flex-col{
   flex-direction: column;
 }
@@ -1083,12 +1079,12 @@ input[type="range"]::-ms-fill-lower{
   gap: 1.75rem;
 }
 
-.gap-9{
-  gap: 2.25rem;
-}
-
 .gap-4{
   gap: 1rem;
+}
+
+.gap-9{
+  gap: 2.25rem;
 }
 
 .gap-6{
@@ -1221,6 +1217,21 @@ input[type="range"]::-ms-fill-lower{
   background-color: rgb(4 108 78 / var(--tw-bg-opacity));
 }
 
+.bg-green-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 159 110 / var(--tw-bg-opacity));
+}
+
+.bg-green-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(5 122 85 / var(--tw-bg-opacity));
+}
+
+.bg-green-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(3 84 63 / var(--tw-bg-opacity));
+}
+
 .bg-green-100{
   --tw-bg-opacity: 1;
   background-color: rgb(222 247 236 / var(--tw-bg-opacity));
@@ -1239,21 +1250,6 @@ input[type="range"]::-ms-fill-lower{
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-green-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(5 122 85 / var(--tw-bg-opacity));
-}
-
-.bg-green-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(3 84 63 / var(--tw-bg-opacity));
-}
-
-.bg-green-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(14 159 110 / var(--tw-bg-opacity));
 }
 
 .bg-green-400{
@@ -1321,6 +1317,21 @@ input[type="range"]::-ms-fill-lower{
   padding-bottom: 0.5rem;
 }
 
+.px-7{
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
+
+.py-20{
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-10{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -1351,11 +1362,6 @@ input[type="range"]::-ms-fill-lower{
   padding-right: 1.5rem;
 }
 
-.px-7{
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
-}
-
 .py-9{
   padding-top: 2.25rem;
   padding-bottom: 2.25rem;
@@ -1369,16 +1375,6 @@ input[type="range"]::-ms-fill-lower{
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-}
-
-.py-20{
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 
 .px-9{
@@ -1438,14 +1434,14 @@ input[type="range"]::-ms-fill-lower{
   line-height: 1.25rem;
 }
 
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-2xl{
@@ -1506,6 +1502,11 @@ input[type="range"]::-ms-fill-lower{
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.text-gray-600{
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
 .text-gray-500{
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1514,11 +1515,6 @@ input[type="range"]::-ms-fill-lower{
 .text-gray-900{
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
-.text-gray-600{
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 .text-gray-200{
@@ -1649,12 +1645,20 @@ input[type="range"]::-ms-fill-lower{
     width: 80%;
   }
 
+  .md\:w-\[50\%\]{
+    width: 50%;
+  }
+
   .md\:w-\[90\%\]{
     width: 90%;
   }
 
   .md\:w-auto{
     width: auto;
+  }
+
+  .md\:max-w-sm{
+    max-width: 24rem;
   }
 
   .md\:grid-cols-2{
@@ -1675,6 +1679,12 @@ input[type="range"]::-ms-fill-lower{
     margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .md\:space-x-9 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-x-reverse: 0;
+    margin-right: calc(2.25rem * var(--tw-space-x-reverse));
+    margin-left: calc(2.25rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
   .md\:border-0{
     border-width: 0px;
   }
@@ -1690,6 +1700,10 @@ input[type="range"]::-ms-fill-lower{
   .md\:px-10{
     padding-left: 2.5rem;
     padding-right: 2.5rem;
+  }
+
+  .md\:text-left{
+    text-align: left;
   }
 
   .md\:text-2xl{
