--- a/public/styles.css
+++ b/public/styles.css
@@ -1034,6 +1034,22 @@ input[type="range"]::-ms-fill-lower{
   width: 2000px;
 }
 
+.w-\[30\%\]{
+  width: 30%;
+}
+
+.w-\[\]{
+  width: ;
+}
+
+.w-\[0\%\]{
+  width: 0%;
+}
+
+.w-\[70\%\]{
+  width: 70%;
+}
+
 .max-w-4xl{
   max-width: 56rem;
 }
@@ -1115,6 +1131,24 @@ input[type="range"]::-ms-fill-lower{
   --tw-space-x-reverse: 0;
   margin-right: calc(2rem * var(--tw-space-x-reverse));
   margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-10 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-6 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .overflow-y-auto{
@@ -1272,6 +1306,11 @@ input[type="range"]::-ms-fill-lower{
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
+.bg-lightGreen{
+  --tw-bg-opacity: 1;
+  background-color: rgb(230 246 244 / var(--tw-bg-opacity));
+}
+
 .bg-cover{
   background-size: cover;
 }
@@ -1380,6 +1419,11 @@ input[type="range"]::-ms-fill-lower{
 .px-9{
   padding-left: 2.25rem;
   padding-right: 2.25rem;
+}
+
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pl-3{
@@ -1704,6 +1748,10 @@ input[type="range"]::-ms-fill-lower{
 
   .md\:text-left{
     text-align: left;
+  }
+
+  .md\:text-right{
+    text-align: right;
   }
 
   .md\:text-2xl{
