--- a/public/styles.css
+++ b/public/styles.css
@@ -906,8 +906,16 @@ input[type="range"]::-ms-fill-lower{
   margin-top: 2.5rem;
 }
 
+.mb-8{
+  margin-bottom: 2rem;
+}
+
 .mb-2{
   margin-bottom: 0.5rem;
+}
+
+.mt-14{
+  margin-top: 3.5rem;
 }
 
 .mt-8{
@@ -1034,22 +1042,6 @@ input[type="range"]::-ms-fill-lower{
   width: 2000px;
 }
 
-.w-\[30\%\]{
-  width: 30%;
-}
-
-.w-\[\]{
-  width: ;
-}
-
-.w-\[0\%\]{
-  width: 0%;
-}
-
-.w-\[70\%\]{
-  width: 70%;
-}
-
 .max-w-4xl{
   max-width: 56rem;
 }
@@ -1133,22 +1125,10 @@ input[type="range"]::-ms-fill-lower{
   margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-x-10 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-6 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-4 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+.space-y-6 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
 .overflow-y-auto{
@@ -1241,6 +1221,11 @@ input[type="range"]::-ms-fill-lower{
   background-color: rgb(0 163 150 / var(--tw-bg-opacity));
 }
 
+.bg-lightGreen{
+  --tw-bg-opacity: 1;
+  background-color: rgb(230 246 244 / var(--tw-bg-opacity));
+}
+
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1306,11 +1291,6 @@ input[type="range"]::-ms-fill-lower{
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
-.bg-lightGreen{
-  --tw-bg-opacity: 1;
-  background-color: rgb(230 246 244 / var(--tw-bg-opacity));
-}
-
 .bg-cover{
   background-size: cover;
 }
@@ -1341,14 +1321,14 @@ input[type="range"]::-ms-fill-lower{
   padding-bottom: 1.25rem;
 }
 
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
 .py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .py-2{
@@ -1419,11 +1399,6 @@ input[type="range"]::-ms-fill-lower{
 .px-9{
   padding-left: 2.25rem;
   padding-right: 2.25rem;
-}
-
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
 }
 
 .pl-3{
@@ -1581,6 +1556,11 @@ input[type="range"]::-ms-fill-lower{
   color: rgb(4 108 78 / var(--tw-text-opacity));
 }
 
+.text-darkGreen{
+  --tw-text-opacity: 1;
+  color: rgb(0 92 84 / var(--tw-text-opacity));
+}
+
 .underline{
   text-decoration-line: underline;
 }
@@ -1729,6 +1709,12 @@ input[type="range"]::-ms-fill-lower{
     margin-left: calc(2.25rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .md\:space-y-0 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
   .md\:border-0{
     border-width: 0px;
   }
@@ -1748,10 +1734,6 @@ input[type="range"]::-ms-fill-lower{
 
   .md\:text-left{
     text-align: left;
-  }
-
-  .md\:text-right{
-    text-align: right;
   }
 
   .md\:text-2xl{
