--- a/public/styles.css
+++ b/public/styles.css
@@ -894,6 +894,11 @@ input[type="range"]::-ms-fill-lower{
   margin-bottom: 5rem;
 }
 
+.my-12{
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
 .mt-\[15\%\]{
   margin-top: 15%;
 }
@@ -1042,8 +1047,20 @@ input[type="range"]::-ms-fill-lower{
   width: 2000px;
 }
 
+.w-\[\]{
+  width: ;
+}
+
+.w-\[20\%\]{
+  width: 20%;
+}
+
 .max-w-4xl{
   max-width: 56rem;
+}
+
+.max-w-md{
+  max-width: 28rem;
 }
 
 .grow{
@@ -1065,6 +1082,10 @@ input[type="range"]::-ms-fill-lower{
 
 .flex-col{
   flex-direction: column;
+}
+
+.flex-col-reverse{
+  flex-direction: column-reverse;
 }
 
 .flex-wrap{
@@ -1131,6 +1152,12 @@ input[type="range"]::-ms-fill-lower{
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
+.space-y-8 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+
 .overflow-y-auto{
   overflow-y: auto;
 }
@@ -1149,6 +1176,10 @@ input[type="range"]::-ms-fill-lower{
 
 .rounded-xl{
   border-radius: 0.75rem;
+}
+
+.rounded-full{
+  border-radius: 9999px;
 }
 
 .rounded-tr-lg{
@@ -1210,6 +1241,11 @@ input[type="range"]::-ms-fill-lower{
 .border-green-500{
   --tw-border-opacity: 1;
   border-color: rgb(14 159 110 / var(--tw-border-opacity));
+}
+
+.border-\[\#00A396\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 163 150 / var(--tw-border-opacity));
 }
 
 .bg-transparent{
@@ -1468,6 +1504,10 @@ input[type="range"]::-ms-fill-lower{
   line-height: 2rem;
 }
 
+.text-\[20px\]{
+  font-size: 20px;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -1685,6 +1725,14 @@ input[type="range"]::-ms-fill-lower{
     max-width: 24rem;
   }
 
+  .md\:max-w-md{
+    max-width: 28rem;
+  }
+
+  .md\:max-w-xl{
+    max-width: 36rem;
+  }
+
   .md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1695,6 +1743,10 @@ input[type="range"]::-ms-fill-lower{
 
   .md\:flex-row{
     flex-direction: row;
+  }
+
+  .md\:justify-between{
+    justify-content: space-between;
   }
 
   .md\:space-x-8 > :not([hidden]) ~ :not([hidden]){
