--- a/public/styles.css
+++ b/public/styles.css
@@ -1323,6 +1323,11 @@ input[type="range"]::-ms-fill-lower{
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
+.bg-lightBg{
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 244 244 / var(--tw-bg-opacity));
+}
+
 .bg-cover{
   background-size: cover;
 }
@@ -1437,6 +1442,11 @@ input[type="range"]::-ms-fill-lower{
   padding-right: 2.25rem;
 }
 
+.py-12{
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
 .pl-3{
   padding-left: 0.75rem;
 }
@@ -1447,6 +1457,22 @@ input[type="range"]::-ms-fill-lower{
 
 .pt-20{
   padding-top: 5rem;
+}
+
+.pb-8{
+  padding-bottom: 2rem;
+}
+
+.pt-10{
+  padding-top: 2.5rem;
+}
+
+.pb-14{
+  padding-bottom: 3.5rem;
+}
+
+.pb-20{
+  padding-bottom: 5rem;
 }
 
 .text-center{
